--- a/index.html
+++ b/index.html
@@ -2,12 +2,25 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Hexlet Frontend Project</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    <header>
+      <h1>RSS агрегатор</h1>
+      <form>
+        <div>
+          <label for="rss" class="form-label">Начните читать RSS сегодня! Это легко, это красиво.</label>
+          <input type="text" class="form-control" id="rss" aria-describedby="textRss">
+          <div id="textRss" class="form-text">Пример: https://lorem-rss.hexlet.app/feed</div>
+        </div>
+        <button type="submit" class="btn btn-primary">Добавить</button>
+      </form>
+    </header>
+    <main>
+    </main>
+    <footer>
+      <p>created by Hexlet</p>
+    </footer>
   </body>
 </html>
