Add to RRADME.md the link to the website

--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
       <form>
         <div>
           <label for="rss" class="form-label">Начните читать RSS сегодня! Это легко, это красиво.</label>
-          <input type="text" class="form-control" id="rss" aria-describedby="textRss">
-          <div id="textRss" class="form-text">Пример: https://lorem-rss.hexlet.app/feed</div>
+          <input type="text" class="form-control" id="rss">
         </div>
         <button type="submit" class="btn btn-primary">Добавить</button>
       </form>
+      <div><p>Пример: https://lorem-rss.hexlet.app/feed</p></div>
     </header>
     <main>
     </main>
     <footer>
       <p>created by Hexlet</p>
     </footer>
+    <sctript type="module" src="/src/main.js"></sctript>
   </body>
 </html>
