--- a/index.html
+++ b/index.html
@@ -5,23 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hexlet Frontend Project</title>
   </head>
-  <body>
+  <body class="d-flex flex-column nim-vh-100">
     <header>
-      <h1>RSS агрегатор</h1>
-      <form>
-        <div>
-          <label for="rss" class="form-label">Начните читать RSS сегодня! Это легко, это красиво.</label>
-          <input type="text" class="form-control" id="rss">
-        </div>
-        <button type="submit" class="btn btn-primary">Добавить</button>
-      </form>
-      <div><p>Пример: https://lorem-rss.hexlet.app/feed</p></div>
     </header>
-    <main>
+    <main class="flex-grow-1">
+      <section class="container-fluid bg-dark p-5">
+        <div class="row">
+          <div class="col-md-10 col-lg-8 mx-auto text-white">
+            <h1 class="display-3 mb-0">RSS агрегатор</h1>
+            <p class="lead">Начните читать RSS сегодня! Это легко, это красиво.</p>
+            <form action class="rss-form text-body">
+              <div class="row">
+                <div class="col">
+                  <div class="form-floating">
+                    <input id="url-input" autofocus type="text" required name="url" aria-label="url" class="form-control w-100"  placeholder="Ссылка RSS" autocomplete="off">
+                    <label for="url-input">Ссылка RSS</label>
+                  </div>
+                </div>
+                <div class="col-auto">
+                  <button type="submit" aria-label="add" class="h-100 btn btn-lg btn-primary px-sm-5">Добавить</button>
+                </div>
+              </div>
+            </form>
+            <p class="mt-2 mb-0 text-secondary">Пример: https://lorem-rss.hexlet.app/feed</p>
+            <p class="feedback m-0 position-absolute small text-danger"></p>
+          </div>
+        </div>
+      </section>
+      <section class="container-fluid container-xxl p-5"></section>
     </main>
-    <footer>
-      <p>created by Hexlet</p>
+    <footer class="footer border-top py-3 mt-5 bg-light">
+      <div class="container-xl">
+        <div class="text-center">
+          " created by "
+          <a href="https://ru.hexlet.io/professions/frontend/projects/11" target="_blank">Hexlet</a>
+        </div>
+      </div>
     </footer>
-    <sctript type="module" src="/src/main.js"></sctript>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
