--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               </div>
             </form>
             <p class="mt-2 mb-0 text-secondary">Пример: https://lorem-rss.hexlet.app/feed</p>
-            <p class="feedback m-0 position-absolute small text-success">Текст проверка</p>
+            <p class="feedback m-0 position-absolute small text-success"></p>
           </div>
         </div>
       </section>
